# PySysLinkBasePythonBindings

./: .gitignore  .gitmodules  README.md  test.py  test2.py
.github/workflows/: ci.yml
examples/: python_module.py  system1.yaml  system1_complex.yaml  system1_continuous.yaml  system1_multirate.yaml  system_euler_for_back.yaml  system_from_editor.yaml  system_python_block.yaml  system_saturation.yaml  system_second_order_custom.yaml  test.py  test2.py  test_continuous.py  test_custom_block.py  test_custom_continuous.py  test_euler_for_back.py  test_multirate.py  test_python_block.py  test_step_continuous.py
litgen_template/: CMakeLists.txt  mypy.ini  pyproject.toml
litgen_template/_pydef_nanobind/: nanobind_PySysLinkBase.cpp
litgen_template/_pydef_pybind11/: module.cpp  pybind_PySysLinkBase.cpp
litgen_template/_stubs/pysyslink_base/: __init__.pyi
litgen_template/conda.recipe/: meta.yaml
litgen_template/tools/: autogenerate_bindings.py
pysyslink_base/: CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-dev.txt  test.h
pysyslink_base/.github/workflows/: conda.yml
pysyslink_base/_pydef_nanobind/: module.cpp  nanobind_PySysLinkBase.cpp
pysyslink_base/_pydef_pybind11/: pybind_PySysLinkBase.cpp
pysyslink_base/_stubs/pysyslink_base/: __init__.pyi
pysyslink_base/tests/: pysyslink_base_test.py
pysyslink_base/tools/: autogenerate_bindings.py
